# py-cqengine

./: .gitignore  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  pyproject.toml
benchmarks/: basic.py  cache_benchmark.py  complex_query_benchmark.py  detailed_profile.py  latency_test.py  lazy_resultset_benchmark.py  profile_and.py  run_all.py  sweet_spot_analysis.py  weakref_benchmark.py
benchmarks/competitive/: compare.py  harness.py  run_pycqengine.py  run_python.py
python/pycqengine/: __init__.py  attribute.py  core.py  query.py
src/: btree_index.rs  collection.rs  hash_index.rs  index.rs  lib.rs  types.rs
tests/: conftest.py  smoke_test.py  test_attribute.py  test_collection.py  test_integration.py  test_query.py  test_range_queries.py  test_weakref.py
