[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pycqengine"
version = "0.1.0"
description = "High-performance in-memory NoSQL indexing engine for Python object collections"
authors = [
    { name = "Saif Asif", email = "saif@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
keywords = ["query", "index", "nosql", "search", "performance", "rust"]

[project.urls]
Homepage = "https://github.com/yourusername/py-cqengine"
Documentation = "https://github.com/yourusername/py-cqengine#readme"
Repository = "https://github.com/yourusername/py-cqengine"
Issues = "https://github.com/yourusername/py-cqengine/issues"

[tool.maturin]
python-source = "python"
module-name = "pycqengine._rs"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313", "py314"]

[tool.ruff]
line-length = 100
target-version = "py311"
